# EicRoot

./: .gitignore  CMakeLists.txt  README  README.ayk  README.md
base/: CMakeLists.txt  FairDetector.h  FairGeaneApplication.cxx  FairHit.cxx  FairHit.h  FairMCApplication.cxx  FairMCApplication.h  FairModule.cxx  FairModule.h  FairMultiLinkedData.cxx  FairRadGridManager.cxx  FairRootManager.h  FairRun.cxx  FairRun.h  FairRunAna.h  FairRunInfo.cxx  FairRunSim.cxx  FairRunSim.h
cbmbase/: CMakeLists.txt  CbmAddress.cxx  CbmAddress.h  CbmBaseLinkDef.h  CbmDigiManager.cxx  CbmDigiManager.h  CbmDrawHist.h  CbmGlobalTrackFitter.cxx  CbmGlobalTrackFitter.h  CbmHistManager.h  CbmMCEntry.cxx  CbmMCEntry.h  CbmMCList.cxx  CbmMCList.h  CbmMCMatch.cxx  CbmMCMatch.h  CbmMCMatchCreatorTask.cxx  CbmMCMatchCreatorTask.h  CbmMCMatchLinkDef.h  CbmMCMatchLoaderTask.cxx  CbmMCMatchLoaderTask.h  CbmMCMatchSelectorTask.cxx  CbmMCMatchSelectorTask.h  CbmMCObject.cxx  CbmMCObject.h  CbmMCResult.cxx  CbmMCResult.h  CbmMCStage.cxx  CbmMCStage.h  CbmModule.cxx  CbmModule.h  CbmModuleList.cxx  CbmModuleList.h  CbmPrimaryVertexFinder.cxx  CbmPrimaryVertexFinder.h  CbmPropagator.cxx  CbmPropagator.h  CbmRichMerger.cxx  CbmRichMerger.h  CbmRichRingFinder.cxx  (+12 more)
cbmdata/: CMakeLists.txt  CbmBaseHit.cxx  CbmBaseHit.h  CbmCluster.cxx  CbmCluster.h  CbmDetectorList.cxx  CbmDetectorList.h  CbmDigi.cxx  CbmDigi.h  CbmHit.cxx  CbmHit.h  CbmMCEpoch.cxx  CbmMCEpoch.h  CbmMCEvent.cxx  CbmMCEvent.h  CbmMCEventHeader.cxx  CbmMCEventHeader.h  CbmMCTrack.cxx  CbmMCTrack.h  CbmPixelHit.cxx  CbmPixelHit.h  CbmStack.cxx  CbmStack.h  CbmStripHit.cxx  CbmStripHit.h  CbmTrack.cxx  CbmTrack.h  CbmTrackMatch.cxx  CbmTrackMatch.h  DataLinkDef.h
dbase/: CMakeLists.txt  FairDBLinkDef.h
eic/cad/: CMakeLists.txt  EicCadFile.cxx  EicCadFile.h  EicCadFileConfig.cxx  EicCadFileConfig.h  EicCompositeShape.cxx  EicCompositeShape.h  EicStlFacet.cxx  EicStlFacet.h  EicStlFacetAssembly.h  EicStlFacetEdge.cxx  EicStlFacetEdge.h  EicStlFactory.cxx  EicStlFactory.h  EicStlKey.h  EicStlMediaGroup.cxx  EicStlMediaGroup.h  EicStlVertex.cxx  EicStlVertex.h  README  eiccadLinkDef.h
eic/cad/tetgen/: tetgen.cxx  tetgen.h
eic/cad/wizard/: CMakeLists.txt  EicCadWizard.cxx  EicCadWizard.h  EicCadWizardCone.cxx  EicCadWizardCone.h  EicCadWizardCut.h  EicCadWizardCylinder.cxx  EicCadWizardCylinder.h  EicCadWizardPlane.cxx  EicCadWizardPlane.h  EicCadWizardSphere.cxx  EicCadWizardSphere.h  EicCadWizardTorus.cxx  EicCadWizardTorus.h  eicwizardLinkDef.h
eic/geometry/: CMakeLists.txt  EicDetector.cxx  EicDetector.h  EicGeoMap.cxx  EicGeoMap.h  EicGeoParData.cxx  EicGeoParData.h  EicUnits.h  eicgeoLinkDef.h
eic/jana/: CMakeLists.txt  EicJEventProcessor.h  EicJEventSource.cc  EicJEventSource.h  EicJanaPlugin.cc
eventdisplay/: CMakeLists.txt  FairEventManager.h
examples/: README
fairtools/: CMakeLists.txt  CMakeLists.txt.ok  FairLogger.cxx  FairLogger.h
field/: CMakeLists.txt  PndConstField.cxx  PndConstField.h  PndConstPar.cxx  PndDipoleMap.cxx  PndDipoleMap.h  PndFieldCreator.cxx  PndFieldCreator.h  PndFieldMap.cxx  PndFieldMap.h  PndFieldMapData.h  PndMultiField.cxx  PndMultiField.h  PndMultiFieldPar.cxx  PndMultiFieldPar.h  PndRegion.cxx  PndTransMap.cxx  PndTransMap.h
gconfig/: Geane.C  SetCuts.C  basiclibs.C.off  g3Config.C  g3libs.C.off  g4Config.C  g4config.in  g4libs.C  rootlogon.C  rootlogon.C.off
geane/: CMakeLists.txt  FairGeane.cxx  FairGeanePro.cxx
generators/: CMakeLists.txt  FairAsciiGenerator.cxx  FairAsciiGenerator.h  FairBoxGenerator.cxx  FairBoxGenerator.h  FairShieldGenerator.cxx  FairShieldGenerator.h  FairUrqmdGenerator.cxx  GenLinkDef.h
genfit/: CMakeLists.txt  CMakeLists_panda.txt  GFAbsRecoHit.cxx  GFBookkeeping.cxx  GFKalman.cxx  GFRecoHitFactory.cxx.orig  GFRecoHitFactory.h.orig  GFRecoHitProducer.h.orig  GFTools.cxx  GFTools.h
geobase/: CMakeLists.txt  FairGeoAsciiIo.cxx  FairGeoAsciiIo.h  FairGeoAssembly.cxx  FairGeoAssembly.h  FairGeoBasicShape.cxx  FairGeoBasicShape.h  FairGeoCone.cxx  FairGeoCone.h  FairGeoCons.cxx  FairGeoCons.h  FairGeoEltu.cxx  FairGeoEltu.h  FairGeoMedia.cxx  FairGeoMedia.h  FairGeoMedium.cxx  FairGeoMedium.h  FairGeoNode.cxx  FairGeoNode.h  FairGeoOldAsciiIo.cxx  FairGeoOldAsciiIo.h  FairGeoPcon.cxx  FairGeoPcon.h  FairGeoPgon.cxx  FairGeoPgon.h  FairGeoSet.cxx  FairGeoSet.h  FairGeoShapes.cxx  FairGeoShapes.h  FairGeoSphe.cxx  FairGeoSphe.h  FairGeoTorus.cxx  FairGeoTorus.h  FairGeoTube.cxx  FairGeoTube.h  FairGeoTubs.cxx  FairGeoTubs.h  FairGeoVector.h
geometry/: cave-120m-thin-air.geo  cave-120m-vacuum.geo  cave-40m-thin-air.geo  cave-40m.geo  cave.geo  media.geo  pCDR-2018  rad_length.C  rich_v13a_f.gdml
input/: DipoleMap2.root  DipoleMap3.root  MRS_B1_Bmap_19032013.table  README  SolenoidMap1.root  SolenoidMap2.root  SolenoidMap9.root  dipole.c  tpc-digi-250um.root  tpc-digi.root
parbase/: CMakeLists.txt  FairDetParAsciiFileIo.cxx  FairDetParAsciiFileIo.h  FairGenericParAsciiFileIo.cxx  FairGenericParAsciiFileIo.h  FairParAsciiFileIo.cxx  FairParAsciiFileIo.h  FairParRootFileIo.cxx  FairRtdbRun.cxx  FairRtdbRun.h
passive/: CMakeLists.txt  PndCave.cxx  PndCave.h  PndGeoCave.cxx  PndGeoCave.h  PndGeoMagnet.h  PndGeoPassivePar.cxx  PndGeoPassivePar.h  PndGeoPipe.cxx  PndGeoPipe.h  PndGeoTarget.h  PndMagnet.cxx  PndMagnet.h  PndPassiveContFact.cxx  PndPassiveContFact.h  PndPipe.cxx  PndPipe.h  PndTarget.cxx  PndTarget.h
pid/: CMakeLists.txt  PidLinkDef.h
pnddata/: CMakeLists.txt  FairRecoCandidate.cxx  FairRecoCandidate.h  PndDataLinkDef.h  PndDetectorList.h  PndMCTrack.cxx  PndMCTrack.h  PndStack.cxx  PndStack.h
rich/: CMakeLists.txt  CbmGeoRich.cxx  CbmGeoRich.h  (+25 more)
rich/standalone/: CMakeLists.txt  Makefile  main.cxx
rich/standalone/algorithm/: CbmLitMemoryManagment.h  CbmRichRingFinderHough.cxx  CbmRichRingFinderHough.h  CbmRichRingFinderHoughImpl.cxx  CbmRichRingFinderHoughImpl.h  CbmRichRingFitterCOPLight.h  CbmRichRingLight.h  CbmRichRingSelectImplLight.h  CbmRichRingSelectNeuralNet.h  NNfunction.cxx  NNfunction.h  Stopwatch.h
rich/standalone/data/: events.txt
(+667 files in other folders)
