
set(INCLUDE_DIRECTORIES
${ROOT_INCLUDE_DIR} 

${CMAKE_SOURCE_DIR}/eic/geometry
)

include_directories( ${INCLUDE_DIRECTORIES})

set(LINK_DIRECTORIES
${ROOT_LIBRARY_DIR}
)
 
link_directories( ${LINK_DIRECTORIES})

set(EICGEO_SRCS
EicDetName.cxx
EicNamePatternHub.cxx
EicGeoMap.cxx
EicGeoParData.cxx

EicDetector.cxx	
)

CHANGE_FILE_EXTENSION(*.cxx *.h EICGEO_HEADERS "${EICGEO_SRCS}")
set(EICGEO_HEADERS ${EICGEO_HEADERS} EicUnits.h)
set(EICGEO_LINKDEF  eicgeoLinkDef.h)
set(EICGEO_DICTIONARY ${CMAKE_CURRENT_BINARY_DIR}/eicgeoDict.cxx) 

ROOT_GENERATE_DICTIONARY("${EICGEO_HEADERS}" "${EICGEO_LINKDEF}" "${EICGEO_DICTIONARY}" "${INCLUDE_DIRECTORIES}")

SET(EICGEO_SRCS ${EICGEO_SRCS} ${EICGEO_DICTIONARY})

add_library(eicgeo SHARED ${EICGEO_SRCS})
target_link_libraries(eicgeo ${ROOT_LIBRARIES})
set_target_properties(eicgeo PROPERTIES VERSION 0.0.1 )

install(TARGETS eicgeo DESTINATION ${CMAKE_BINARY_DIR}/lib)
